[tool.poetry]
name = "composter"
version = "0.1.0"
description = ""
authors = ["''"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kucoin-python = "^1.0.21"
loguru = "^0.7.2"
nats-py = "^2.8.0"
uvloop = "^0.19.0"
orjson = "^3.10.6"
python-decouple = "^3.8"
setuptools = "^70.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
